app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: app-ingress
spec:
  rules:
  - host: ec2-34-239-117-66.compute-1.amazonaws.com
    http:
      paths:
      - backend:
          service:
            name: appsvc1
            port:
              number: 80
        path: /app1
        pathType: Prefix
      - backend:
          service:
            name: appsvc2
            port:
              number: 80
        path: /app2
        pathType: Prefix
