nginx-ingress.yaml
#apiVersion: networking.k8s.io/v1 
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: ec2-34-239-117-66.compute-1.amazonaws.com
    http:
      paths:
      - backend:
          service:
            name: nginx-ingress
            port:
              number: 18080
        path: /nginx_status
        pathType: Prefix
